# evaluate-descriptors

./: CMakeLists.txt  README.md  expl.md  main.cpp
data/: res.xml  res_noise_10.xml  res_noise_4.xml  res_partial.xml  res_transf_10.xml  results.yaml
data/img_light/: 4.tiff
h/: a  alter.hpp  eval.hpp
plot/: index.html  style.css  todo
plot/data/: res_noise_10.xml  res_partial.xml  res_transf_10.xml
plot/js/: script.js
src/: alter.cpp  alteration_picker.cpp  eval.cpp
src/alter/: alter.cpp  noise.cpp  transf.cpp
src/scripts/: plot_results.py
